2007-02-xx: summary of changes from 2.3.0 to 2.4.0
--------------------------------------------------
	- squashed bug #083 (brp prepost exceptions)
	- squashed bug #087 (DEVDATE multiple expansion)
	- squashed bug #085 (Makefile.common)
	- squashed bug #086 (foo dist target should be dist-brp)
	- squashed bug #017 (sr.exec_path)
	- squashed bug #088 (dist-* target deps)
	- squashed bug #084 (SRP_CHAIN)
	- squashed bug #089 (SRP_{,NO_}LEFTOVERS)
	- squashed bug #091 (python bug #1609958)
	- squashed bug #092 (SRP_CHAIN upgrade)
	
	Fixing bug #085 introduces SRP's Makefile.common.  This makefile can
	be used by package maintainers to consistently create
	foo-x.y.z.tar.bz2, foo-x.y.z-r.srp, and foo-x.y.z-r.platform.id.brp
	targets.  See Info files and example packages for instructions.
	
	Fixing bug #084 introduces a new srp_flag: SRP_CHAIN.  This flag can
	be used to generate multiple BRPs (or installed packages) from a
	single SRP.  For example, building the foo-1.0-1.srp package would
	result in three stand-alone BRPs: foo-1.0-1.linux.i686.brp,
	foo-dev-1.0-1.linux.i686.brp, and foo-docs-1.0-1.linux.i686.brp.
	The flag should have the next package's NOTES file's name attached
	as an argument.
	
	Fixing bug #089 introduces two new flags: SRP_LEFTOVERS and
	SRP_NO_LEFTOVERS.  SRP_LEFTOVERS is now a member of default_flags
	and is the traditional behavior when upgrading (left-over files
	remain behind as a special package).  To turn off this behavior, a
	package can use the SRP_NO_LEFTOVERS flag to force SRP to remove all
	traces of the old package when upgrading.
	
	Fixing bug #091 introduces new functionality to python-test.
	python-test will now run each script in python-test.d (if it
	exists) with each interpreter found with an appropriate version to
	check for other interpreter features/bugs.  The only script in
	there right now is check-tarfile-module.py, which checks for the
	existence of python bug #1609958.
	