@@ -1,7 +1,7 @@
 MAKEFILE      =	Makefile
 
 PRODUCT	      =	srp
-VERSION	      =	2.4.0
+VERSION	      =	2.4.1
 PACKAGEREV    =	1
 DEVTAG	      =	
 
